# sample-aws-marketplace-product-listing

./: .bedrock_agentcore.yaml  .env.example  .gitignore  BUYER_EXPERIENCE_INTEGRATION.md  BUYER_EXPERIENCE_STEPS_FIX.md  CHANGELOG.md  CHATBOT_KNOWLEDGE_BASE_UPDATE.md  CHATBOT_VOICE_AND_HISTORY_UPDATE.md  COMPLETE_SYSTEM_READY.md  COMPLETE_WORKFLOW_SUMMARY.md  CONTINUE_BUTTON_FEATURE.md  CONTRIBUTING.md  CREDENTIAL_CHANGES.md  DELETE_REDEPLOY_FLOW.md  DEPLOYMENT_SUMMARY.md  DIMENSION_KEY_STORAGE_UPDATE.md  DOCUMENTATION.md  DUPLICATE_CREDENTIALS_FIX.md  Dockerfile  ENHANCEMENTS_COMPLETE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATED_WORKFLOW.md  INTEGRATION_FLOW.md  Integration.yaml  LICENSE  METERING_README.md  METERING_TABLE_LOGIC.md  METERING_VERIFICATION_UPDATE.md  NEXTJS_IMPLEMENTATION_PLAN.md  NEXTJS_IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PUBLIC_VISIBILITY_WORKFLOW.md  ProductCategories.rtf  README.md  RELEASE_CHECKLIST.md  SAAS_INTEGRATION_FIX.md  SECURITY.md  (+52 more)
agent/: __init__.py  marketplace_agent_v2.py  orchestrator.py  strands_entrypoint.py  strands_marketplace_agent.py
agents/: __init__.py  buyer_experience.py  create_saas.py  marketplace_integration.py  metering.py  public_visibility.py  run_integration.py  serverless_saas_integration.py  status_checker.py  validation_helper.py  workflow_orchestrator.py
backend/: input_sanitizer.py  main.py
bedrock_agent/: ai_marketplace_orchestrator.py  knowledge_base_setup.yaml  marketplace_chatbot.py
config/: agent_config.yaml  multi_agent_config.yaml
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_BANNER.md  AWS_THEME_IMPLEMENTATION.md  BEDROCK_AGENTCORE_COMPONENTS.md  BEDROCK_AGENTCORE_MIGRATION.md  CHATBOT_AWS_INTEGRATION.md  CHATBOT_IMPLEMENTATION.md  DESIGN.md  DOCUMENTATION.md  END_TO_END_TEST_GUIDE.md  GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  NEXTJS_MIGRATION_COMPLETE_GUIDE.md  OPTIMIZATION_APPLIED.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_RESTRUCTURE.md  SAAS_INTEGRATION_COMPLETE_WORKFLOW.md  (+8 more)
(+155 files in other folders)
